--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </figure>
         <div class="info-content">
           <h1 class="name" title="Nikita Kodkany">Nikita Kodkany</h1>
-          <p class="title">Data Science and Engineering</p>
+          <p class="title">Data Scientist</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
@@ -41,15 +41,6 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
               <a href="mailto:kodkany@usc.edu" class="contact-link">kodkany@usc.edu</a>
-            </div>
-          </li>
-          <li class="contact-item">
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-              <a href="tel:+12136919301" class="contact-link">+1 (213) 691-9301</a>
             </div>
           </li>
           <li class="contact-item">
