added 1 more project

--- a/index.html
+++ b/index.html
@@ -455,6 +455,41 @@
                 <img src="./assets/images/reddit/GDS-Dashboard.png" alt="Output Image" class="project-image" data-fade>
             </div>
           </div>
+          
+          <!-- Dunes of Influence Project -->
+          <div class="proj-projects-box fade-in" data-project-box>
+            <h4 class="proj-projects-title" data-project-title>Dunes of Influence</h4>
+            <p class="proj-projects-summary">Quantitative Prediction of Influential Individuals' Influence on Community Dynamics through Advanced Language Models.</p>
+            <div class="proj-details" data-project-details>
+                <p>This project develops a deep learning framework to estimate potential engagement metrics such as likes, comments, and retweets for new tweets, leveraging data from social media platforms like Twitter and Reddit.</p>
+                <h5>The tools and techniques used for this project are the following:</h5>
+                <ul class="tools-list">
+                    <li>> **Data Collection**: Collect data from Twitter and Reddit using their respective APIs.</li>
+                    <li>> **Pre-processing**: Use techniques like sentiment analysis, topic classification, and content embeddings to extract relevant features.</li>
+                    <li>> **Modeling**: Use transformer-based neural networks to predict future engagement metrics.</li>
+                    <li>> **Languages**: Python for scripting and data processing.</li>
+                    <li>> **Frameworks**: TensorFlow, PyTorch for building and training the models.</li>
+                    <li>> **Tools**: Jupyter Notebook for experimentation and visualization, Pandas for data manipulation, Scikit-learn for additional data processing and model evaluation.</li>
+                </ul>
+                <h5>Project's Architecture</h5>
+                <img src="./assets/images/dunes/pipeline.png" alt="Project's Architecture" class="project-image" data-fade>
+                <h5>Steps</h5>
+                <ul class="steps-list">
+                    <li>> Collect data from Twitter and Reddit.</li>
+                    <li>> Pre-process the data using sentiment analysis, topic classification, and content embeddings.</li>
+                    <li>> Feed the processed data into a transformer-based neural network.</li>
+                    <li>> Train the model using historical data.</li>
+                    <li>> Validate the model using various performance metrics.</li>
+                    <li>> Predict engagement metrics such as likes, comments, and retweets for new tweets.</li>
+                </ul>
+                <h5>Output</h5>
+                <p>The model demonstrated high accuracy in predicting engagement metrics, with transformer-based models outperforming traditional models. The results indicated that semantic embeddings and sentiment analysis significantly improve prediction performance. The use of multi-modal data and advanced NLP techniques enabled a deeper understanding of social media dynamics.</p>
+                <img src="./assets/images/dunes/val_likes_mae.png" alt="Likes Prediction Graph" class="project-image" data-fade>
+                <img src="./assets/images/dunes/val_replies_mae.png" alt="Comments Prediction Graph" class="project-image" data-fade>
+                <img src="./assets/images/dunes/val_retweets_mae.png" alt="Retweets Prediction Graph" class="project-image" data-fade>
+                <p>Overall, the project showcased the effectiveness of integrating advanced machine learning techniques for predicting social media engagement, providing valuable insights for marketers and content creators.</p>
+            </div>
+          </div>
 
             
         </section>
