updated tools and technologies

--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
                   <span class="badge">Java</span>
                   <span class="badge">SQL</span>
                   <span class="badge">R</span>
-                  <span class="badge">JavaScript</span>
                 </div>
               </div>
             </div>
@@ -210,20 +209,18 @@
               <div class="skills-content">
                 <h3>Frameworks</h3>
                 <div class="skill-badges">
-                  <span class="badge">Sklearn</span>
-                  <span class="badge">Tensorflow</span>
+                  <span class="badge">scikit-learn</span>
+                  <span class="badge">TensorFlow</span>
                   <span class="badge">PyTorch</span>
-                  <span class="badge">Numpy</span>
+                  <span class="badge">NumPy</span>
                   <span class="badge">Pandas</span>
                   <span class="badge">Seaborn</span>
                   <span class="badge">Matplotlib</span>
                   <span class="badge">PySpark</span>
                   <span class="badge">Streamlit</span>
-                  <span class="badge">NLTK</span>
-                  <span class="badge">Oracle SQL</span>
-                  <span class="badge">MySQL</span>
-                  <span class="badge">Impala SQL</span>
-                  <span class="badge">HiveQL</span>
+                  <span class="badge">nltk</span>
+                  <span class="badge">Spacy</span>
+                  <span class="badge">Optuna</span>
                 </div>
               </div>
             </div>
@@ -237,27 +234,28 @@
                   <span class="badge">Apache Hadoop</span>
                   <span class="badge">Apache Spark</span>
                   <span class="badge">Apache HIVE</span>
+                  <span class="badge">Airflow</span>
                   <span class="badge">Snowflake</span>
                   <span class="badge">AWS Redshift</span>
                   <span class="badge">AWS Sagemaker</span>
-                  <span class="badge">Google Cloud Platform</span>
                   <span class="badge">Microsoft Azure</span>
-                  <span class="badge">JIRA</span>
-                  <span class="badge">Git</span>
-                  <span class="badge">Azure Databrick</span>
-                  <span class="badge">UNIX</span>
-                  <span class="badge">LINUX</span>
-                  <span class="badge">Agile Development</span>
-                  <span class="badge">Tableau</span>
-                  <span class="badge">Microsoft Power BI</span>
+                  <span class="badge">GCP AI Platform</span>
+                  <span class="badge">Azure Synapse</span>
                   <span class="badge">QlikSense</span>
+                  <span class="badge">Tableau</span>
+                  <span class="badge">Power BI</span>
+                  <span class="badge">Docker</span>
+                  <span class="badge">Terraform</span>
+                  <span class="badge">Git</span>
+                  <span class="badge">Insomnia</span>
+                  <span class="badge">PostgreSQL</span>
                   <span class="badge">Hue</span>
-                  <span class="badge">Docker Hub</span>
+                  <span class="badge">Databricks</span>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+        </section>        
       </article>
 
       <article class="resume" data-page="resume">
