updated skills section

--- a/index.html
+++ b/index.html
@@ -229,34 +229,77 @@
                 <ion-icon name="settings-outline"></ion-icon>
               </div>
               <div class="skills-content">
-                <h3>Tools & Technologies</h3>
+                <h3>Big Data & Distributed Systems</h3>
                 <div class="skill-badges">
                   <span class="badge">Apache Hadoop</span>
                   <span class="badge">Apache Spark</span>
                   <span class="badge">Apache HIVE</span>
+                  <span class="badge">HIVEQL</span>
                   <span class="badge">Airflow</span>
-                  <span class="badge">Snowflake</span>
+                </div>
+              </div>
+            </div>
+            <div class="skills-category">
+              <div class="skills-icon">
+                <ion-icon name="cloud-outline"></ion-icon>
+              </div>
+              <div class="skills-content">
+                <h3>Cloud Platforms & Services</h3>
+                <div class="skill-badges">
                   <span class="badge">AWS Redshift</span>
                   <span class="badge">AWS Sagemaker</span>
+                  <span class="badge">S3</span>
                   <span class="badge">Microsoft Azure</span>
                   <span class="badge">GCP AI Platform</span>
                   <span class="badge">Azure Synapse</span>
+                </div>
+              </div>
+            </div>
+            <div class="skills-category">
+              <div class="skills-icon">
+                <ion-icon name="bar-chart-outline"></ion-icon>
+              </div>
+              <div class="skills-content">
+                <h3>Data Visualization Tools</h3>
+                <div class="skill-badges">
                   <span class="badge">QlikSense</span>
                   <span class="badge">Tableau</span>
                   <span class="badge">Power BI</span>
+                </div>
+              </div>
+            </div>
+            <div class="skills-category">
+              <div class="skills-icon">
+                <ion-icon name="repeat-outline"></ion-icon>
+              </div>
+              <div class="skills-content">
+                <h3>CI/CD & Automation Tools</h3>
+                <div class="skill-badges">
                   <span class="badge">Docker</span>
                   <span class="badge">Terraform</span>
                   <span class="badge">Git</span>
+                  <span class="badge">Airflow</span>
                   <span class="badge">Insomnia</span>
+                </div>
+              </div>
+            </div>
+            <div class="skills-category">
+              <div class="skills-icon">
+                <ion-icon name="folder-open-outline"></ion-icon>
+              </div>
+              <div class="skills-content">
+                <h3>Databases & Data Warehousing</h3>
+                <div class="skill-badges">
+                  <span class="badge">Snowflake</span>
                   <span class="badge">PostgreSQL</span>
-                  <span class="badge">Hue</span>
                   <span class="badge">Databricks</span>
+                  <span class="badge">Hue</span>
                 </div>
               </div>
             </div>
           </div>
         </section>
-               
+                  
       </article>
 
       <article class="resume" data-page="resume">
