updated resume section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@
 
       <article class="resume" data-page="resume">
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title">
+            <a href="./assets/images/NikitaKodkany_Resume.pdf" target="_blank">Resume</a>
+          </h2>
         </header>
         <section class="timeline">
           <div class="title-wrapper">
@@ -355,8 +357,8 @@
                 <li>> Led the conversion of three QlikSense dashboards to Tableau, significantly boosting analytics and data processing speed</li>
                 <li>> Implemented and automated an email subscription system via Tableau, providing regular performance reports to healthcare providers and enhancing communication</li>
                 <li>> Enhanced ICU predictive analytics using NLP for care escalation forecasts</li>
-                <li>> Validated data ingestion across platforms (HEa, AWS Redshift, Snowflake) using SQL, ensuring high dashboard accuracy and reducing discrepancies</li>
-                <li>> Processed and analyzed extensive patient records to build ML models predicting Length of Stay (LOS) and mortality rates</li>
+                <li>> Validated data ingestion across platforms (HeA, AWS Redshift, Snowflake) using SQL, ensuring high dashboard accuracy and reducing discrepancies</li>
+                <li>> Processed and analyzed extensive patient records of EHR data to build ML models predicting Length of Stay (LOS) and mortality rates</li>
                 <li>> Created one-pagers for dashboards and documentation for new orients on the department's Data Portal</li>
                 <li>> Presented these initiatives to the Executive Leadership Team, showcasing improvements in data accuracy, processing speed, and operational efficiency</li>
             </ul>            
@@ -372,7 +374,7 @@
               </div>
               <ul class="timeline-description">
                 <li>> Optimized the existing ETL by performing data analysis, using PySpark and SQL, significantly improving efficiency and time</li>
-                <li>> Developed an ML pipeline with high classification accuracy for patent classification, automating the patent classification process</li>
+                <li>> Developed an ML pipeline with high classification accuracy for patent classification, automating the patent classification process using LLMs</li>
                 <li>> Conducted a signal processing session for professionals, discussing how signal processing in ML can be applied in the automotive domain and addressing its nuances</li>
                 <li>> Participated in mini projects, such as predicting the employee number for a particular day to minimize food wastage</li>
             </ul>
