updated resume link section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
       <article class="resume" data-page="resume">
         <header>
-          <h2 class="h2 article-title">Resume <a href="./assets/images/NikitaKodkany_Resume.pdf" target="_blank">link</a></h2>
+          <h2 class="h2 article-title">Resume <a href="./assets/images/NikitaKodkany_Resume.pdf" class="resume-link" target="_blank">[link]</a></h2>
         </header>
         <section class="timeline">
           <div class="title-wrapper">
